--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Please feel free to contact me if you want to discuss any of my projects : )
       <p class="margin-small">&nbsp;</p>
       <p class="content">
       <strong><a href="https://arxiv.org/abs/2010.12136" target="_blank">Paper</a></strong> |
-      <strong><a href="https://github.com/mrlibw/mrlibw.github.io" target="_blank">Code</a></strong><br> </p>  </tr>
+      <strong><a href="https://github.com/mrlibw/Lightweight-Manipulation" target="_blank">Code</a></strong><br> </p>  </tr>
 </tbody></table>
 <p class="margin-small">&nbsp;</p>
 
