--- a/index.html
+++ b/index.html
@@ -46,7 +46,60 @@ Please feel free to contact me if you want to discuss any of my projects : )
 
 <h2>Research</h2>
 
-<!-- Image-to-Image Translation with Text Guidance. -->
+<!-- Word-Level Fine-Grained Story Visualization. -->
+
+<table border="0">
+  <tbody><tr>
+    <td width="140"><img src="imgs/Word_Story_Cover.gif" border="1"width="210"></a></td>
+    <td width="20"></td>
+    <td valign="middle" width="900"><p class="content"><strong>Word-Level Fine-Grained Story Visualization.</strong></p>
+      Bowen Li, <a style="text-decoration:none;color: #000" href="http://www.cs.ox.ac.uk/people/thomas.lukasiewicz/">Thomas Lukasiewicz</a></p>
+      <p class="content">ECCV 2022</p>
+      <p class="margin-small">&nbsp;</p>
+      <p class="content">
+      <strong><a href="https://arxiv.org/pdf/2208.02341" target="_blank">Paper</a></strong> |
+      <strong><a href="https://github.com/mrlibw/Word-Level-Story-Visualization" target="_blank">Code</a></strong><br>      
+      </p></tr>
+</tbody></table>
+<p class="margin-small">&nbsp;</p>
+
+
+<!-- Clustering Generative Adversarial Networks for Story Visualization. -->
+
+<table border="0">
+  <tbody><tr>
+    <td width="140"><img src="" border="1"width="210"></a></td>
+    <td width="20"></td>
+    <td valign="middle" width="900"><p class="content"><strong>Clustering Generative Adversarial Networks for Story Visualization.</strong></p>
+      Bowen Li, <a style="text-decoration:none;color: #000" href="http://www.robots.ox.ac.uk/~phst/">Philip H. S. Torr</a>, <a style="text-decoration:none;color: #000" href="http://www.cs.ox.ac.uk/people/thomas.lukasiewicz/">Thomas Lukasiewicz</a></p>
+      <p class="content">ACMMM 2022</p>
+      <p class="margin-small">&nbsp;</p>
+      <p class="content">
+      <!--<strong><a href="" target="_blank">Paper</a></strong> |
+      <strong><a href="https://github.com/mrlibw/Clustering-Story-Visualization" target="_blank">Code</a></strong><br> -->     
+      </p></tr>
+</tbody></table>
+<p class="margin-small">&nbsp;</p>
+
+<!-- Memory-Driven Text-to-Image Generation. -->
+
+<table border="0">
+  <tbody><tr>
+    <td width="140"><img src="imgs/Memory_T2I_Cover.pdf" border="1"width="210"></a></td>
+    <td width="20"></td>
+    <td valign="middle" width="900"><p class="content"><strong>Memory-Driven Text-to-Image Generation.</strong></p>
+      Bowen Li, <a style="text-decoration:none;color: #000" href="http://www.robots.ox.ac.uk/~phst/">Philip H. S. Torr</a>, <a style="text-decoration:none;color: #000" href="http://www.cs.ox.ac.uk/people/thomas.lukasiewicz/">Thomas Lukasiewicz</a></p>
+      <p class="content">arXiv 2021 </p>
+      <p class="margin-small">&nbsp;</p>
+      <p class="content">
+      <strong><a href="https://arxiv.org/pdf/2208.07022" target="_blank">Paper</a></strong> 
+      </p></tr>
+</tbody></table>
+<p class="margin-small">&nbsp;</p>
+
+
+
+<!-- Lightweight Generative Adversarial Networks for Text-Guided Image Manipulation. -->
 
 <table border="0">
   <tbody><tr>
@@ -58,7 +111,8 @@ Please feel free to contact me if you want to discuss any of my projects : )
       <p class="margin-small">&nbsp;</p>
       <p class="content">
       <strong><a href="https://arxiv.org/abs/2010.12136" target="_blank">Paper</a></strong> |
-      <strong><a href="https://github.com/mrlibw/Lightweight-Manipulation" target="_blank">Code</a></strong><br> </p>  </tr>
+      <strong><a href="https://github.com/mrlibw/Lightweight-Manipulation" target="_blank">Code</a></strong><br> 
+      </p></tr>
 </tbody></table>
 <p class="margin-small">&nbsp;</p>
 
@@ -73,7 +127,8 @@ Please feel free to contact me if you want to discuss any of my projects : )
       <p class="content">arXiv 2020</p>
       <p class="margin-small">&nbsp;</p>
       <p class="content">
-      <strong><a href="https://arxiv.org/abs/2002.05235" target="_blank">Paper</a></strong> <br> </p>  </tr>
+      <strong><a href="https://arxiv.org/abs/2002.05235" target="_blank">Paper</a></strong><br> 
+      </p></tr>
 </tbody></table>
 <p class="margin-small">&nbsp;</p>
 
@@ -89,7 +144,8 @@ Please feel free to contact me if you want to discuss any of my projects : )
       <p class="margin-small">&nbsp;</p>
       <p class="content">
 			<strong><a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Li_ManiGAN_Text-Guided_Image_Manipulation_CVPR_2020_paper.pdf" target="_blank">Paper</a></strong> |
-      <strong><a href="https://github.com/mrlibw/ManiGAN" target="_blank">Code</a></strong><br> </p>  </tr>
+      <strong><a href="https://github.com/mrlibw/ManiGAN" target="_blank">Code</a></strong><br> 
+      </p></tr>
 </tbody></table>
 <p class="margin-small">&nbsp;</p>
 
@@ -105,13 +161,15 @@ Please feel free to contact me if you want to discuss any of my projects : )
       <p class="margin-small">&nbsp;</p>
       <p class="content">
 			<strong><a href="https://papers.nips.cc/paper/8480-controllable-text-to-image-generation.pdf" target="_blank">Paper</a></strong> |
-			<strong><a href="https://github.com/mrlibw/ControlGAN" target="_blank">Code</a></strong> <br> </p>  </tr>
+			<strong><a href="https://github.com/mrlibw/ControlGAN" target="_blank">Code</a></strong> <br> 
+      </p></tr>
 </tbody></table>
 <p class="margin-small">&nbsp;</p>
 
 <br>
 <hr>
-Last Update: November, 2020
+Last Update: September, 2022
+<!-- Last Update: November, 2020 -->
 <br>
 <br>
 
