--- a/index.html
+++ b/index.html
@@ -46,6 +46,25 @@ Please feel free to contact me if you want to discuss any of my projects : )
 
 <h2>Research</h2>
 
+
+<!-- Learning to Model Multimodal Semantic Alignment for Story Visualization. -->
+
+<table border="0">
+  <tbody><tr>
+    <td width="140"><img src="" border="1"width="210"></a></td>
+    <td width="20"></td>
+    <td valign="middle" width="900"><p class="content"><strong>Learning to Model Multimodal Semantic Alignment for Story Visualization.</strong></p>
+      Bowen Li, <a style="text-decoration:none;color: #000" href="http://www.cs.ox.ac.uk/people/thomas.lukasiewicz/">Thomas Lukasiewicz</a></p>
+      <p class="content">EMNLP 2022</p>
+      <p class="margin-small">&nbsp;</p>
+      <p class="content">
+      <!-- <strong><a href="" target="_blank">Paper</a></strong> |
+      <strong><a href="" target="_blank">Code</a></strong><br> -->   
+      </p></tr>
+</tbody></table>
+<p class="margin-small">&nbsp;</p>
+
+
 <!-- Word-Level Fine-Grained Story Visualization. -->
 
 <table border="0">
@@ -89,7 +108,7 @@ Please feel free to contact me if you want to discuss any of my projects : )
     <td width="20"></td>
     <td valign="middle" width="900"><p class="content"><strong>Memory-Driven Text-to-Image Generation.</strong></p>
       Bowen Li, <a style="text-decoration:none;color: #000" href="http://www.robots.ox.ac.uk/~phst/">Philip H. S. Torr</a>, <a style="text-decoration:none;color: #000" href="http://www.cs.ox.ac.uk/people/thomas.lukasiewicz/">Thomas Lukasiewicz</a></p>
-      <p class="content">arXiv 2021 </p>
+      <p class="content">arXiv 2021 / BMVC 2022</p>
       <p class="margin-small">&nbsp;</p>
       <p class="content">
       <strong><a href="https://arxiv.org/pdf/2208.07022" target="_blank">Paper</a></strong> 
@@ -124,7 +143,7 @@ Please feel free to contact me if you want to discuss any of my projects : )
     <td width="20"></td>
     <td valign="middle" width="900"><p class="content"><strong>Image-to-Image Translation with Text Guidance.</strong></p>
       Bowen Li, <a style="text-decoration:none;color: #000" href="https://xjqi.github.io/">Xiaojuan Qi</a>, <a style="text-decoration:none;color: #000" href="http://www.robots.ox.ac.uk/~phst/">Philip H. S. Torr</a>, <a style="text-decoration:none;color: #000" href="http://www.cs.ox.ac.uk/people/thomas.lukasiewicz/">Thomas Lukasiewicz</a></p>
-      <p class="content">arXiv 2020</p>
+      <p class="content">arXiv 2020 / BMVC 2022</p>
       <p class="margin-small">&nbsp;</p>
       <p class="content">
       <strong><a href="https://arxiv.org/abs/2002.05235" target="_blank">Paper</a></strong><br> 
