--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-	<title>Bowen Li</title>
-	<link rel="stylesheet" href="style.css">
-	<script type="text/javascript" src="./spam.js"></script>
-	</script>
+  <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+  <title>Bowen Li</title>
+  <link rel="stylesheet" href="style.css">
+  <script type="text/javascript" src="./spam.js"></script>
+  </script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125422931-1"></script>
   <script>
@@ -51,7 +51,7 @@ Please feel free to contact me if you want to discuss any of my projects : )
 
 <table border="0">
   <tbody><tr>
-    <td width="140"><img src="" border="1"width="210"></a></td>
+    <td width="140"><img src="imgs/Semantic_Alignment_Cover.pdf" border="1"width="210"></a></td>
     <td width="20"></td>
     <td valign="middle" width="900"><p class="content"><strong>Learning to Model Multimodal Semantic Alignment for Story Visualization.</strong></p>
       Bowen Li, <a style="text-decoration:none;color: #000" href="http://www.cs.ox.ac.uk/people/thomas.lukasiewicz/">Thomas Lukasiewicz</a></p>
@@ -87,15 +87,15 @@ Please feel free to contact me if you want to discuss any of my projects : )
 
 <table border="0">
   <tbody><tr>
-    <td width="140"><img src="" border="1"width="210"></a></td>
+    <td width="140"><img src="imgs/Clustering_Cover.pdf" border="1"width="210"></a></td>
     <td width="20"></td>
     <td valign="middle" width="900"><p class="content"><strong>Clustering Generative Adversarial Networks for Story Visualization.</strong></p>
       Bowen Li, <a style="text-decoration:none;color: #000" href="http://www.robots.ox.ac.uk/~phst/">Philip H. S. Torr</a>, <a style="text-decoration:none;color: #000" href="http://www.cs.ox.ac.uk/people/thomas.lukasiewicz/">Thomas Lukasiewicz</a></p>
       <p class="content">ACMMM 2022</p>
       <p class="margin-small">&nbsp;</p>
       <p class="content">
-      <!--<strong><a href="" target="_blank">Paper</a></strong> |
-      <strong><a href="https://github.com/mrlibw/Clustering-Story-Visualization" target="_blank">Code</a></strong><br> -->     
+      <strong><a href="https://ora.ox.ac.uk/objects/uuid:c3c89908-450a-471a-be5e-4d47f1e5bd39/download_file?file_format=application%2Fpdf&safe_filename=Li_et_al_2022_Clustering_generative_adversarial.pdf&type_of_work=Conference+item" target="_blank">Paper</a></strong> |
+      <strong><a href="https://github.com/mrlibw/Clustering-Story-Visualization" target="_blank">Code</a></strong><br>   
       </p></tr>
 </tbody></table>
 <p class="margin-small">&nbsp;</p>
@@ -162,7 +162,7 @@ Please feel free to contact me if you want to discuss any of my projects : )
       <p class="content">CVPR 2020</p>
       <p class="margin-small">&nbsp;</p>
       <p class="content">
-			<strong><a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Li_ManiGAN_Text-Guided_Image_Manipulation_CVPR_2020_paper.pdf" target="_blank">Paper</a></strong> |
+      <strong><a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Li_ManiGAN_Text-Guided_Image_Manipulation_CVPR_2020_paper.pdf" target="_blank">Paper</a></strong> |
       <strong><a href="https://github.com/mrlibw/ManiGAN" target="_blank">Code</a></strong><br> 
       </p></tr>
 </tbody></table>
@@ -179,15 +179,16 @@ Please feel free to contact me if you want to discuss any of my projects : )
       <p class="content">NeurIPS 2019</p>
       <p class="margin-small">&nbsp;</p>
       <p class="content">
-			<strong><a href="https://papers.nips.cc/paper/8480-controllable-text-to-image-generation.pdf" target="_blank">Paper</a></strong> |
-			<strong><a href="https://github.com/mrlibw/ControlGAN" target="_blank">Code</a></strong> <br> 
+      <strong><a href="https://papers.nips.cc/paper/8480-controllable-text-to-image-generation.pdf" target="_blank">Paper</a></strong> |
+      <strong><a href="https://github.com/mrlibw/ControlGAN" target="_blank">Code</a></strong> <br> 
       </p></tr>
 </tbody></table>
 <p class="margin-small">&nbsp;</p>
 
 <br>
 <hr>
-Last Update: September, 2022
+Last Update: November, 2022
+<!-- Last Update: September, 2020 -->
 <!-- Last Update: November, 2020 -->
 <br>
 <br>
