--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@ Please feel free to contact me if you want to discuss any of my projects : )
       <p class="content">EMNLP 2022</p>
       <p class="margin-small">&nbsp;</p>
       <p class="content">
-      <!-- <strong><a href="" target="_blank">Paper</a></strong> |
-      <strong><a href="" target="_blank">Code</a></strong><br> -->   
+      <strong><a href="https://arxiv.org/pdf/2211.07289.pdf" target="_blank">Paper</a></strong> 
       </p></tr>
 </tbody></table>
 <p class="margin-small">&nbsp;</p>
