--- a/index.html
+++ b/index.html
@@ -184,7 +184,20 @@ Please feel free to contact me if you want to discuss any of my projects : )
 </tbody></table>
 <p class="margin-small">&nbsp;</p>
 
+
+<hr><br>
+
+<h2>Professional Activities</h2>
+
+<ul>
+<li><strong>Conference Review</strong>: CVPR (2022-2023), ICLR (2022-2023), NeurIPS (2021-2022), SIGGRAPH Asia 2022, ECCV (2022), ICML (2022), AAAI (2022), ACM MM (2020-2022).</li>
+
 <br>
+
+<li><strong>Journal Review</strong>: IEEE TPAMI, IEEE TIP, Neurocomputing, The Visual Computer, Transaction on Big Data, Pattern Recognition.</li>
+</ul>
+
+
 <hr>
 Last Update: November, 2022
 <!-- Last Update: September, 2020 -->
