--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@ Please feel free to contact me if you want to discuss any of my projects : )
       <p class="content">arXiv 2021 / BMVC 2022</p>
       <p class="margin-small">&nbsp;</p>
       <p class="content">
-      <strong><a href="https://arxiv.org/pdf/2208.07022" target="_blank">Paper</a></strong> 
+      <strong><a href="https://arxiv.org/pdf/2208.07022" target="_blank">Paper</a></strong> |
+      <strong><a href="https://github.com/mrlibw/Memory-Driven-Text-to-Image-Generation" target="_blank">Code</a></strong><br>   
       </p></tr>
 </tbody></table>
 <p class="margin-small">&nbsp;</p>
