--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Please feel free to contact me if you want to discuss any of my projects : )
 
 <table border="0">
   <tbody><tr>
-    <td width="140"><img src="imgs/Semantic_Alignment_Cover.pdf" border="1"width="210"></a></td>
+    <td width="140"><img src="imgs/Semantic_Alignment_Cover.jpg" border="1"width="210"></a></td>
     <td width="20"></td>
     <td valign="middle" width="900"><p class="content"><strong>Learning to Model Multimodal Semantic Alignment for Story Visualization.</strong></p>
       Bowen Li, <a style="text-decoration:none;color: #000" href="http://www.cs.ox.ac.uk/people/thomas.lukasiewicz/">Thomas Lukasiewicz</a></p>
@@ -86,7 +86,7 @@ Please feel free to contact me if you want to discuss any of my projects : )
 
 <table border="0">
   <tbody><tr>
-    <td width="140"><img src="imgs/Clustering_Cover.pdf" border="1"width="210"></a></td>
+    <td width="140"><img src="imgs/Clustering_Cover.jpg" border="1"width="210"></a></td>
     <td width="20"></td>
     <td valign="middle" width="900"><p class="content"><strong>Clustering Generative Adversarial Networks for Story Visualization.</strong></p>
       Bowen Li, <a style="text-decoration:none;color: #000" href="http://www.robots.ox.ac.uk/~phst/">Philip H. S. Torr</a>, <a style="text-decoration:none;color: #000" href="http://www.cs.ox.ac.uk/people/thomas.lukasiewicz/">Thomas Lukasiewicz</a></p>
@@ -103,7 +103,7 @@ Please feel free to contact me if you want to discuss any of my projects : )
 
 <table border="0">
   <tbody><tr>
-    <td width="140"><img src="imgs/Memory_T2I_Cover.pdf" border="1"width="210"></a></td>
+    <td width="140"><img src="imgs/Memory_T2I_Cover.jpg" border="1"width="210"></a></td>
     <td width="20"></td>
     <td valign="middle" width="900"><p class="content"><strong>Memory-Driven Text-to-Image Generation.</strong></p>
       Bowen Li, <a style="text-decoration:none;color: #000" href="http://www.robots.ox.ac.uk/~phst/">Philip H. S. Torr</a>, <a style="text-decoration:none;color: #000" href="http://www.cs.ox.ac.uk/people/thomas.lukasiewicz/">Thomas Lukasiewicz</a></p>
@@ -122,7 +122,7 @@ Please feel free to contact me if you want to discuss any of my projects : )
 
 <table border="0">
   <tbody><tr>
-    <td width="140"><img src="imgs/Lightweight_Mani_Cover.pdf" border="1"width="210"></a></td>
+    <td width="140"><img src="imgs/Lightweight_Mani_Cover.jpg" border="1"width="210"></a></td>
     <td width="20"></td>
     <td valign="middle" width="900"><p class="content"><strong>Lightweight Generative Adversarial Networks for</strong></p><p class="content"><strong>Text-Guided Image Manipulation.</strong></p>
       Bowen Li, <a style="text-decoration:none;color: #000" href="https://xjqi.github.io/">Xiaojuan Qi</a>, <a style="text-decoration:none;color: #000" href="http://www.robots.ox.ac.uk/~phst/">Philip H. S. Torr</a>, <a style="text-decoration:none;color: #000" href="http://www.cs.ox.ac.uk/people/thomas.lukasiewicz/">Thomas Lukasiewicz</a></p>
@@ -139,7 +139,7 @@ Please feel free to contact me if you want to discuss any of my projects : )
 
 <table border="0">
   <tbody><tr>
-    <td width="140"><img src="imgs/RefinedGAN_Cover.pdf" border="1"width="210"></a></td>
+    <td width="140"><img src="imgs/RefinedGAN_Cover.jpg" border="1"width="210"></a></td>
     <td width="20"></td>
     <td valign="middle" width="900"><p class="content"><strong>Image-to-Image Translation with Text Guidance.</strong></p>
       Bowen Li, <a style="text-decoration:none;color: #000" href="https://xjqi.github.io/">Xiaojuan Qi</a>, <a style="text-decoration:none;color: #000" href="http://www.robots.ox.ac.uk/~phst/">Philip H. S. Torr</a>, <a style="text-decoration:none;color: #000" href="http://www.cs.ox.ac.uk/people/thomas.lukasiewicz/">Thomas Lukasiewicz</a></p>
@@ -155,7 +155,7 @@ Please feel free to contact me if you want to discuss any of my projects : )
 
 <table border="0">
   <tbody><tr>
-    <td width="140"><img src="imgs/ManiGAN_Cover.pdf" border="1"width="210"></a></td>
+    <td width="140"><img src="imgs/ManiGAN_Cover.jpg" border="1"width="210"></a></td>
     <td width="20"></td>
     <td valign="middle" width="900"><p class="content"><strong>ManiGAN: Text-Guided Image Manipulation.</strong></p>
       Bowen Li, <a style="text-decoration:none;color: #000" href="https://xjqi.github.io/">Xiaojuan Qi</a>, <a style="text-decoration:none;color: #000" href="http://www.cs.ox.ac.uk/people/thomas.lukasiewicz/">Thomas Lukasiewicz</a>, <a style="text-decoration:none;color: #000" href="http://www.robots.ox.ac.uk/~phst/">Philip H. S. Torr</a></p>
