--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@ Oxford, OX1 3QD, UK<br><br>
 
 
 Email: <script>spam("bowen.li");</script><br>
+
+<a style="text-decoration:none;color: #000" href="https://scholar.google.co.uk/citations?user=krdY8RUAAAAJ&hl=en">Google Scholar</a>, <a style="text-decoration:none;color: #000" href="https://www.linkedin.com/in/bowen-li-316828226">Linkedin</a>, <a style="text-decoration:none;color: #000" href="https://github.com/mrlibw/">Github</a></p>
+
 <br>
 Please feel free to contact me if you want to discuss any of my projects : )
 
@@ -42,10 +45,14 @@ Please feel free to contact me if you want to discuss any of my projects : )
 </table>
 
 
+
+
 <hr><br>
 
 <h2>Research</h2>
-
+You can find my full publication list on <a style="text-decoration:none;color: #3377ff" href="https://scholar.google.co.uk/citations?user=krdY8RUAAAAJ&hl=en">Google Scholar</a>.
+<br>
+<br>
 
 <!-- Learning to Model Multimodal Semantic Alignment for Story Visualization. -->
 
