--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Email: <script>spam("bowen.li");</script><br>
 <a style="text-decoration:none;color: #000" href="https://scholar.google.co.uk/citations?user=krdY8RUAAAAJ&hl=en">Google Scholar</a>, <a style="text-decoration:none;color: #000" href="https://www.linkedin.com/in/bowen-li-316828226">Linkedin</a>, <a style="text-decoration:none;color: #000" href="https://github.com/mrlibw/">Github</a></p>
 
 <br>
-Please feel free to contact me if you want to discuss any of my projects : )
+<a style="text-decoration:none;color: #3377ff" href="https://scholar.google.co.uk/citations?user=krdY8RUAAAAJ&hl=en">Please feel free to contact me if you want to discuss any of my projects :)</a>
 
 
 </td>
