--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@ Oxford, OX1 3QD, UK<br><br>
 
 Email: <script>spam("bowen.li");</script><br>
 
-<a style="text-decoration:none;color: #000" href="https://scholar.google.co.uk/citations?user=krdY8RUAAAAJ&hl=en">Google Scholar</a>, <a style="text-decoration:none;color: #000" href="https://www.linkedin.com/in/bowen-li-316828226">Linkedin</a>, <a style="text-decoration:none;color: #000" href="https://github.com/mrlibw/">Github</a></p>
+<a style="text-decoration:none;color: #3377ff" href="https://scholar.google.co.uk/citations?user=krdY8RUAAAAJ&hl=en">Google Scholar</a>, <a style="text-decoration:none;color: #3377ff" href="https://www.linkedin.com/in/bowen-li-316828226">Linkedin</a>, <a style="text-decoration:none;color: #3377ff" href="https://github.com/mrlibw/">Github</a></p>
 
 <br>
-<a style="text-decoration:none;color: #3377ff" href="https://scholar.google.co.uk/citations?user=krdY8RUAAAAJ&hl=en">Please feel free to contact me if you want to discuss any of my projects :)</a>
+Please feel free to contact me if you want to discuss any of my projects :)
 
 
 </td>
