--- a/index.html
+++ b/index.html
@@ -45,7 +45,16 @@ Please feel free to contact me if you want to discuss any of my projects :)
 </table>
 
 
+<hr><br>
 
+<h2>Recent News</h2>
+
+<ul>
+  <li>
+    <b>Nov, 2022:</b> Submitted my D.Phil thesis.
+  </li>
+
+</ul>
 
 <hr><br>
 
