--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Please feel free to contact me if you want to discuss any of my projects :)
 
 <ul>
   <li>
-    <b>Nov, 2022:</b> Submitted my D.Phil thesis.
+    <b>Nov, 2022:</b> Submitted my D.Phil thesis <b>Multi-Modal Deep Learning for Computer Vision and Its Application</b>.
   </li>
 
 </ul>
