--- a/index.html
+++ b/index.html
@@ -51,9 +51,12 @@ Please feel free to contact me if you want to discuss any of my projects :)
 
 <ul>
   <li>
+    <b>Mar, 2023:</b> Defended my D.Phil thesis and passed! My examiners were <a style="text-decoration:none;color: #3377ff" href="http://www.ron-clark.com/">Prof. Ronald Clark</a> and <a style="text-decoration:none;color: #3377ff" href="https://www.brookes.ac.uk/profiles/staff/fabio-cuzzolin/">Prof. Fabio Cuzzolin</a></b>.
+  </li>
+  <br>
+  <li>
     <b>Nov, 2022:</b> Submitted my D.Phil thesis <b>Multi-Modal Deep Learning for Computer Vision and Its Application</b>.
   </li>
-
 </ul>
 
 <hr><br>
@@ -207,7 +210,7 @@ You can find my full publication list on <a style="text-decoration:none;color: #
 <h2>Professional Activities</h2>
 
 <ul>
-<li><strong>Conference Review</strong>: CVPR (2022-2023), ICLR (2022-2023), NeurIPS (2021-2022), SIGGRAPH Asia 2022, ECCV (2022), ICML (2022), AAAI (2022), ACM MM (2020-2022).</li>
+<li><strong>Conference Review</strong>: CVPR (2022-2023), ICLR (2022-2023), NeurIPS (2021-2022), SIGGRAPH Asia 2022, ECCV (2022), ICML (2022-2023), AAAI (2022), ACM MM (2020-2022).</li>
 
 <br>
 
@@ -216,7 +219,8 @@ You can find my full publication list on <a style="text-decoration:none;color: #
 
 
 <hr>
-Last Update: November, 2022
+Last Update: April, 2023
+<!-- Last Update: September, 2020 -->
 <!-- Last Update: September, 2020 -->
 <!-- Last Update: November, 2020 -->
 <br>
