--- a/index.html
+++ b/index.html
@@ -66,6 +66,27 @@ You can find my full publication list on <a style="text-decoration:none;color: #
 <br>
 <br>
 
+
+
+<!-- Optimisation-Based Multi-Modal Semantic Image Editing. -->
+
+<table border="0">
+  <tbody><tr>
+    <td width="140"><img src="imgs/Optimisation_Cover.png" border="1"width="210"></a></td>
+    <td width="20"></td>
+    <td valign="middle" width="900"><p class="content"><strong>Optimisation-Based Multi-Modal Semantic Image Editing.</strong></p>
+      Bowen Li, Yongxin Yang, Steven McDonagh, Shifeng Zhang, Petru-Daniel Tudosiu, Sarah Parisot</p>
+      <p class="content">arXiv 2023</p>
+      <p class="margin-small">&nbsp;</p>
+      <p class="content">
+      <strong><a href="https://arxiv.org/abs/2311.16882" target="_blank">Paper</a></strong> 
+      </p></tr>
+</tbody></table>
+<p class="margin-small">&nbsp;</p>
+
+
+
+
 <!-- Learning to Model Multimodal Semantic Alignment for Story Visualization. -->
 
 <table border="0">
