--- a/index.html
+++ b/index.html
@@ -22,14 +22,12 @@
 <tr>
 <td width="80%">
 <font size=5em><b>Bowen Li</b></font> <br>
-Department of Computer Science<br>
-University of Oxford<br>
-Wolfson Building, Parks Road<br>
-Oxford, OX1 3QD, UK<br><br>
+Researcher and Game Developer<br>
+London, UK<br><br>
 
 
 
-Email: <script>spam("bowen.li");</script><br>
+Email: <script>spam("drlibw");</script><br>
 
 <a style="text-decoration:none;color: #3377ff" href="https://scholar.google.co.uk/citations?user=krdY8RUAAAAJ&hl=en">Google Scholar</a>, <a style="text-decoration:none;color: #3377ff" href="https://www.linkedin.com/in/bowen-li-316828226">Linkedin</a>, <a style="text-decoration:none;color: #3377ff" href="https://github.com/mrlibw/">Github</a></p>
 
