--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@ You can find my full publication list on <a style="text-decoration:none;color: #
 
 
 <hr>
-Last Update: April, 2023
+Last Update: December, 2025
+<!-- Last Update: April, 2023 -->
 <!-- Last Update: September, 2020 -->
 <!-- Last Update: September, 2020 -->
 <!-- Last Update: November, 2020 -->
